--- a/train_test_classification.ipynb
+++ b/train_test_classification.ipynb
@@ -518,7 +518,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv (3.12.6)",
    "language": "python",
    "name": "python3"
   },
